# PlayerLink

./: .gitignore  404.html  CMakeLists.txt  CMakeLists.txt.bak  CMakeSettings.json  CNAME  CppProperties.json  Doxyfile  doxygentomd.sh  index.html  library.cpp  library.h  mkdocs.yml  namespaces.h
.github/workflows/: cmake.yml  deploydocs.yml
Classes/: index.html
Classes/classClient/: index.html
Classes/classGameRoom/: index.html
Classes/classGameServer/: index.html
Classes/classLogger/: index.html
Classes/classSHA256/: index.html
Classes/classServerSocket/: index.html
Classes/classSocket/: index.html
Classes/classSocketException/: index.html
Classes/classTCPServer/: index.html
Classes/classTCPSocket/: index.html
Classes/structDFHValues/: index.html
Classes/structMessage/: index.html
Classes/structPlayer/: index.html
Examples/: index.html
Modules/: index.html
Namespaces/: index.html
client/net/: Client.cpp  Client.h
core/: api.h
core/crypto/hash/sha/: sha256.cpp  sha256.h
core/crypto/pki/: DFH.c
core/net/: NetConfig.h  Protocols.h  ServerCodes.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h
core/net/tcp/: tcpsocket.cpp  tcpsocket.h
core/net/udp/: UDPSocket.h
core/utils/exceptions/: RuntimeException.cpp  RuntimeException.h
core/utils/fcntl/: fcntl--.h  fcntl-safer.h  fcntl.c  fcntl.in.h
core/utils/logger/: LogSeverity.h  Logger.cpp  Logger.h
crypto/hash/sha/: sha256.cpp  sha256.h
crypto/pki/: DFH.c
docs/Architecture/: Overlay System.md  PlayerLink Repository.md
doxygen/: doxybook2  index.md  mkdocs.yml
include/: boost.cmake  protobuf.cmake
net/: NetConfig.h  Protocols.h  Socket.h
overlay/platform_windows/core/net/: winsockinit.c
platform/microsoft/win32/overlays/core/net/: winsockinit.c  winsockinit.h
search/: search_index.json
server/: ServerSocket.cpp  ServerSocket.h  main.cpp
server/logger/: Logger.cpp  Logger.h
server/net/: GameServer.cpp  GameServer.h  Message.h  Player.h  ServerSocket.cpp  ServerSocket.h  TCPServer.cpp  TCPServer.h
server/room/: Client.cpp  Client.h  GameRoom.cpp  GameRoom.h
src-tests/: CMakeLists.txt  RuntimeExceptionTests.cpp
src/client/: CMakeLists.txt  PlayerLInkClient.h
src/client/net/: CMakeLists.txt  Client.cpp  Client.h
src/core/: CMakeLists.txt  PlayerLinkCore.h
src/core/crypto/: CMakeLists.txt
src/core/crypto/hash/sha/: sha256.cpp  sha256.h
src/core/crypto/pki/: DFH.c
src/core/net/: CMakeLists.txt  NetConfig.h  Protocols.h  ServerCodes.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h
src/core/net/tcp/: tcpsocket.cpp  tcpsocket.h
src/core/utils/: CMakeLists.txt  utils.h
src/core/utils/exceptions/: CMakeLists.txt  RuntimeException.cpp  RuntimeException.h
src/core/utils/logger/: CMakeLists.txt  LogSeverity.h  Logger.cpp  Logger.h
src/platform/microsoft/win32/: CMakeLists.txt
src/platform/microsoft/win32/overlays/core/: CMakeLists.txt  PlayerLinkCoreWin32.h
src/platform/microsoft/win32/overlays/core/net/: CMakeLists.txt  winsockinit.h
src/server/: CMakeLists.txt  main.cpp
src/server/net/: CMakeLists.txt  GameServer.cpp  GameServer.h  Message.h  ServerSocket.cpp  ServerSocket.h  TCPServer.cpp
src/server/room/: Client.cpp  Client.h  GameRoom.cpp  GameRoom.h
utils/logger/: LogSeverity.h  Logger.cpp  Logger.h
