# Copyright 2020 Deranged Senators
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_library(
        PLAYERLINK_CORE_WIN32
        PlayerLinkCoreWin32.h
)

add_subdirectory(net)
target_link_libraries(PLAYERLINK_CORE_WIN32 PRIVATE PLAYERLINK_CORE_NET_WIN32)